--- a/public/css/kpi.css
+++ b/public/css/kpi.css
@@ -1,13 +1,12 @@
-iframe {
-  width: 80%;
-  height: 700px;
-  margin-left: 145px;
-}
-
 .kpi-header{
-  margin-left:34%;
-  color: darkgreen;
+  margin: 2% 0 0 41%;
+  font-family: sans-serif;
+  color: #079207;
+  font-size: 30px;
 }
 .text {
   margin-left: 2%;
+}
+.turbine-form {
+  margin: 0 0 0 44%;
 }
